# vad-rs

./: .gitignore  Cargo.toml  README.md
examples/: record.rs  segment.rs  wav.rs
examples/whisper/: Cargo.toml
examples/whisper/src/: main.rs  whisper.rs
src/: helpers.rs  lib.rs  session.rs  vad.rs  vad_result.rs
