[workspace]
members = ["examples/whisper"]

[package]
name = "vad-rs"
version = "0.1.1"
edition = "2021"
description = "Speech detection using silero vad in Rust"
license = "MIT"

[dependencies]

eyre = "0.6.12"
ndarray = "0.16.1"
once_cell = "1.19.0"
ort = "=2.0.0-rc.5"
samplerate = "0.2.4"


[dev-dependencies]
hound = { version = "3.5.1" }
cpal = "0.15.3"


[features]
default = []
coreml = ["ort/coreml"]
directml = ["ort/directml"]
load-dynamic = ["ort/load-dynamic"]
